clean up references to AS4 + misc docs cleanup

--- a/docs/source/api/express-middleware.mdx
+++ b/docs/source/api/express-middleware.mdx
@@ -5,7 +5,7 @@ api_reference: true
 
 import TopLevelAwait from "../shared/top-level-await.mdx"
 
-This API reference documents Apollo Server 4's [Express](https://expressjs.com/) integration, the `expressMiddleware` function.
+This API reference documents Apollo Server's [Express](https://expressjs.com/) integration, the `expressMiddleware` function.
 
 ## `expressMiddleware`
 
