--- a/docs/source/api/plugin/inline-trace.mdx
+++ b/docs/source/api/plugin/inline-trace.mdx
@@ -5,7 +5,7 @@ api_reference: true
 
 ## Using the plugin
 
-> 📣 **New in Apollo Server 4**: error details are not included in traces by default. For more details, see [Error Handling](../../data/errors/#masking-and-logging-errors).
+> 📣 **New since Apollo Server 4**: error details are not included in traces by default. For more details, see [Error Handling](../../data/errors/#masking-and-logging-errors).
 
 This article documents the options for the `ApolloServerPluginInlineTrace` plugin, which you can import from `@apollo/server/plugin/inlineTrace`.
 
