--- a/docs/source/data/context.mdx
+++ b/docs/source/data/context.mdx
@@ -9,7 +9,7 @@ You can pass useful things through your `contextValue` that any resolver might n
 
 ## The `context` function
 
-> 📣 Apollo Server 4 changes the syntax for defining a `context` function. [See more details.](../migration/#context-initialization-function)
+> 📣 Apollo Server 4 changed the syntax for defining a `context` function. [See more details.](../migration/#context-initialization-function)
 
 The `context` function should be _asynchronous_ and return an **object**. This object is then accessible to your server's resolvers and plugins using the name [`contextValue`](#the-contextvalue-object).
 
