--- a/docs/source/getting-started.mdx
+++ b/docs/source/getting-started.mdx
@@ -327,6 +327,7 @@ One of the most important concepts of GraphQL is that clients can choose to quer
 
 You can view and fork the complete example on Code Sandbox:
 
+FIXME: update codesandbox to v5
 <a href="https://codesandbox.io/s/github/apollographql/docs-examples/tree/main/apollo-server/v4/getting-started?fontsize=14&hidenavigation=1&theme=dark">
   <img
     alt="Edit server-getting-started"
