--- a/docs/source/previous-versions.mdx
+++ b/docs/source/previous-versions.mdx
@@ -2,9 +2,13 @@
 title: Previous versions of Apollo Server
 ---
 
-## Apollo Server 4 is generally available
+## Apollo Server 5 is generally available
 
-Apollo Server 4 is the latest version of Apollo Server and is [generally available](/resources/product-launch-stages#general-availability). Apollo Server 4 is ready for use in a production environment, and Apollo provides official support for this library. There is currently no planned end-of-life date.
+Apollo Server 5 is the latest version of Apollo Server and is [generally available](/resources/product-launch-stages#general-availability). Apollo Server 5 is ready for use in a production environment, and Apollo provides official support for this library. There is currently no planned end-of-life date.
+
+// FIXME: this is a draft and makes unconfirmed assumptions; this info is completely TBD and made up by me with no input from outside opinions who also have a say in this.
+
+Given that Apollo Server 5 is a nearly seamless upgrade, v4 will not receive security or bug fixes in the same way that we've handled them for v2 and v3 in the past. Apollo Server v4 will be end-of-life **May 31st, 2023**.
 
 ## Deprecated versions
 
@@ -15,6 +19,12 @@ Both previous major versions of Apollo Server are currently [deprecated](/resour
 Deprecated versions continue to receive security patches and updates to address major regressions until their end-of-life date. They typically do not receive new features and other kinds of bug fixes may or may not be backported to deprecated versions at Apollo's discretion.
 
 End-of-life versions will remain available in the npm registry and can still be installed and used in your projects. However, Apollo doesn't guarantee any further support for them, nor does Apollo recommend their use. Additionally, Apollo doesn't guarantee that GraphOS features will continue to work for packages beyond their end-of-life date.
+
+### Apollo Server 4
+
+// FIXME: confirm / tweak assumptions
+
+[Apollo Server 4](/apollo-server/v4/) is deprecated and will transition to end-of-life on **May 31st, 2023**. We encourage all Apollo Server 4 users to [**upgrade** to Apollo Server 5 now](./migration). The upgrade from v4 should take only a few minutes and require little to no changes.
 
 ### Apollo Server 3
 
