--- a/docs/source/testing/testing.mdx
+++ b/docs/source/testing/testing.mdx
@@ -179,6 +179,7 @@ describe('e2e demo', () => {
 
 You can also view and fork this complete example on CodeSandbox:
 
+FIXME: update repo
 <a href="https://codesandbox.io/s/github/apollographql/docs-examples/tree/main/apollo-server/v4/integration-testing?fontsize=14&hidenavigation=1&theme=dark">
   <img
     alt="Edit integration-testing"
