--- a/docs/source/workflow/build-run-queries.mdx
+++ b/docs/source/workflow/build-run-queries.mdx
@@ -2,7 +2,7 @@
 title: Build and run queries against Apollo Server
 ---
 
-In non-production environments, Apollo Server 4's landing page is an embedded version of [Apollo Sandbox](/graphos/explorer/sandbox) (served at `http://localhost:4000` by default):
+In non-production environments, Apollo Server's landing page is an embedded version of [Apollo Sandbox](/graphos/explorer/sandbox) (served at `http://localhost:4000` by default):
 
 <img class="screenshot" src="../images/sandbox.jpeg" alt="Apollo Sandbox" />
 
