--- a/docs/source/workflow/generate-types.mdx
+++ b/docs/source/workflow/generate-types.mdx
@@ -110,6 +110,7 @@ Finally, we recommend adding helpful scripts to your `package.json` file to ensu
 }
 ```
 
+FIXME: update repo
 > We also recommend [adding scripts to watch your code](https://github.com/apollographql/docs-examples/blob/e3c133e50cd1d9ce6fb54630ca9ea9395b9bfa4d/apollo-server/v4/generated-types/package.json#L12), enabling your types to regenerate and your TypeScript files to recompile in the background as you work.
 
 Above, running the `npm start` command generates types based on our GraphQL schema _and_ compiles our TypeScript code. The first time you run the `graphql-codegen` command, you'll see a file full of generated types at the path you specified in your `codegen.yml` file.
@@ -235,6 +236,7 @@ const resolvers: Resolvers = {
 
 Check out our example using Apollo Server with generated types on CodeSandbox:
 
+FIXME: update repo
 <a href="https://codesandbox.io/s/github/apollographql/docs-examples/tree/main/apollo-server/v4/generated-types?fontsize=14&hidenavigation=1&initialpath=%2Fgraphql&theme=dark">
   <img
     alt="Edit server-generated-types-as4"
