--- a/docs/source/integrations/plugins-event-reference.mdx
+++ b/docs/source/integrations/plugins-event-reference.mdx
@@ -180,7 +180,7 @@ const server = new ApolloServer({
 
 ### `requestDidStart`
 
-> **New in Apollo Server 4**: In Apollo Server 4, `requestDidStart` hooks are called in parallel rather than in series.
+> 📣 **New since Apollo Server 4**: `requestDidStart` hooks are called in parallel rather than in series.
 
 The `requestDidStart` event fires whenever Apollo Server begins fulfilling a GraphQL request.
 
@@ -354,7 +354,7 @@ This event is _not_ associated with your GraphQL server's _resolvers_. When this
 
 > If the operation is anonymous (i.e., the operation is `query { ... }` instead of `query NamedQuery { ... }`), then `operationName` is `null`.
 
-If a `didResolveOperation` hook throws a [`GraphQLError`](../data/errors#custom-errors), that error is serialized and returned to the client with an HTTP status code of 500 unless [it specifies a different status code](../data/errors#setting-http-status-code-and-headers). 
+If a `didResolveOperation` hook throws a [`GraphQLError`](../data/errors#custom-errors), that error is serialized and returned to the client with an HTTP status code of 500 unless [it specifies a different status code](../data/errors#setting-http-status-code-and-headers).
 
 The `didResolveOperation` hook is a great spot to perform extra validation because it has access to the parsed and validated operation and the request-specific context (i.e., `contextValue`). Multiple plugins can run the `didResolveOperation` in parallel, but if more than one plugin throws, the client only receives a single error.
 
