--- a/docs/source/index.mdx
+++ b/docs/source/index.mdx
@@ -4,9 +4,10 @@ title: Introduction to Apollo Server
 
 > 📣 **Apollo Server 5 is generally available!**
 >
-> Not much has changed since v4, the [v5 migration guide](./migration/) is a one minute read.
+FIXME: link to v5 section in migration guide
+> Not much has changed since v4, the [update to the migration guide](./migration/) is a one minute read.
 >
-> Using Apollo Server 3? Be sure to follow the [v4 migration guide](/apollo-server/v4/migration/) first. Docs for v3 are [available here](/apollo-server/v3/).
+> Using Apollo Server 3? Be sure to follow the [full migration guide](./migration/) first. Docs for v3 are [available here](/apollo-server/v3/).
 
 **Apollo Server is an [open-source](https://github.com/apollographql/apollo-server), spec-compliant GraphQL server** that's compatible with any GraphQL client, including [Apollo Client](/react). It's the best way to build a production-ready, self-documenting GraphQL API that can use data from any source.
 
